src/objects/Escalation_Track__c.object
<CustomObject>
    <fields>
        <fullName>CaseLastModifiedBy__c</fullName>
        <description>This Will store the last modified case user&apos;s name  of the related case</description>
        <inlineHelpText>This Will store the last modified case user&apos;s name  of the related case</inlineHelpText>
        <label>CaseLastModifiedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseLastModifiedDate__c</fullName>
        <label>CaseLastModifiedDate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseType__c</fullName>
        <description>This Will store the type of the related case</description>
        <inlineHelpText>This Will store the type of the related case</inlineHelpText>
        <label>CaseType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Account_Manager_Email__c</fullName>
        <description>Account manager email id of related case.</description>
        <label>Case Account Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Engagement_Manager_Email__c</fullName>
        <description>Engagement manager email id of related case.</description>
        <label>Case Engagement Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Mail_Notification_Time__c</fullName>
        <description>Case Mail Notification Time</description>
        <inlineHelpText>Case Mail Notification Time</inlineHelpText>
        <label>Case Mail Notification Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>Case Number</description>
        <label>Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <label>Case Priority</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Escalation Tracks</relationshipLabel>
        <relationshipName>Escalation_Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Escalation Track</label>
    <nameField>
        <displayFormat>Escalation Track - {0000}</displayFormat>
        <label>Escalation Track Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalation Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>